--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="css/all.css">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Oswald&family=PT+Sans:ital@1&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
-
+  <script src='https://kit.fontawesome.com/a076d05399.js'></script>
   <meta name="theme-color" content="#fafafa">
 </head>
 
@@ -85,7 +85,76 @@
         <source src="video/video.ogv" type="video/ogv">
 
       </video>
-    </div>
+    </div> <!--contenedor-video-->
+
+    <div class="contenido-programa">
+      <div class="contenedor">
+        <div class="programa-evento">
+          <h2>Programa del Evento</h2>
+          <nav class="menu-programa">
+            <a href=""><i class="fa fa-code" aria-hidden="true"></i>Talleres</a>
+            <a href=""><i class="fa fa-comment" aria-hidden="true"></i>Conferencias</a>
+            <a href=""><i class="fa fa-university" aria-hidden="true"></i>Seminarios</a>
+          </nav>
+          <div id ="talleres" class="info-curso ocultar clearfix">
+            <div class="detalle-evento">
+              <h3>HTML5, CSS3 y Javascript</h3>
+              <p><i class="far fa-clock" aria-hidden="true"></i> 16:00</p>
+              <p><i class="fa fa-calendar" aria-hidden="true"></i> 10 Dic</p>
+              <p><i class="fa fa-user" aria-hidden="true"></i> Jordi Cases</p>
+            </div>
+            
+            <div class="detalle-evento">
+              <h3>Responsive Web Desing</h3>
+              <p><i class="far fa-clock" aria-hidden="true"></i> 20:00</p>
+              <p><i class="fa fa-calendar" aria-hidden="true"></i> 10 Dic</p>
+              <p><i class="fa fa-user" aria-hidden="true"></i> Jordi Cases</p>
+            </div>
+            <a href="#" class="button float-right">Ver Todos</a>
+          </div> <!--talleres-->
+        </div> <!--.programa-evento-->
+      </div><!--contenedor-->
+    </div> <!--.contenido-programa-->
+  </section> <!--programa-->
+
+  <section class="invitados contenedor seccion">
+    <h2>Nuestros Invitados</h2>
+    <ul class="lista-invitados clearfix">
+    <li>
+      <div class="invitado">
+        <img src="img/invitado1.jpg" alt="imagen invitado1">
+        <p>Rafael Bautista</p>
+      </div>
+    </li>
+    <li>
+      <div class="invitado">
+        <img src="img/invitado2.jpg" alt="imagen invitado2">
+        <p>Shari Herrera</p>
+      </div>
+    </li> <li>
+      <div class="invitado">
+        <img src="img/invitado3.jpg" alt="imagen invitado3">
+        <p>Gregorio Sanchez</p>
+      </div>
+    </li> <li>
+      <div class="invitado">
+        <img src="img/invitado4.jpg" alt="imagen invitado1">
+        <p>Susana Rivera</p>
+      </div>
+    </li> <li>
+      <div class="invitado">
+        <img src="img/invitado5.jpg" alt="imagen invitado1">
+        <p>Harlod Garcia</p>
+      </div>
+    </li> <li>
+      <div class="invitado">
+        <img src="img/invitado6.jpg" alt="imagen invitado1">
+        <p>Susan Sanchez</p>
+      </div>
+    </li>
+      
+    </ul>
+
   </section>
 
   <script src="js/vendor/modernizr-3.8.0.min.js"></script>
