--- a/index.html
+++ b/index.html
@@ -157,6 +157,117 @@
 
   </section>
 
+  <div class="contador parallax">
+    <div class="contenedor">
+      <ul class="resumen-evento clearfix">
+        <li><p class="numero">6</p>Invitados</li>
+        <li><p class="numero">15</p>Talleres</li>
+        <li><p class="numero">3</p>Dias</li>
+        <li><p class="numero">9</p>Conferencias</li>
+      </ul>
+    </div>
+  </div>
+
+  <section class="precios seccion">
+    <h2>Precios</h2>
+    <div class="contenedor">
+      <ul class="lista-precios clearfix">
+        <li>
+          <div class="tabla-precio">
+            <h3>Pase por dia</h3>
+            <p class="numero">$30</p>
+            <ul>
+              <li>Bocadillos gratis</li>
+              <li>Todas las conferencias</li>
+              <li>Todos los talleres</li>
+            </ul>
+            <a href="#" class="button hollow">Comprar</a>
+          </div>
+        </li>
+        <li>
+          <div class="tabla-precio">
+            <h3>Todos los dias</h3>
+            <p class="numero">$50</p>
+            <ul>
+              <li>Bocadillos gratis</li>
+              <li>Todas las conferencias</li>
+              <li>Todos los talleres</li>
+            </ul>
+            <a href="#" class="button">Comprar</a>
+          </div>
+        </li>
+        <li>
+          <div class="tabla-precio">
+            <h3>Pase por 2 días</h3>
+            <p class="numero">$45</p>
+            <ul>
+              <li>Bocadillos gratis</li>
+              <li>Todas las conferencias</li>
+              <li>Todos los talleres</li>
+            </ul>
+            <a href="#" class="button hollow">Comprar</a>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </section>
+
+  <div id="mapa" class="mapa">
+  </div>
+
+  <section class="seccion">
+    <h2>Testimoniales</h2>
+    <div class="testimoniales contenedor clearfix">
+      <div class="testimonial">
+        <blockquote>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vehicula convallis erat. In ante augue, feugiat luctus justo eu, luctus tempus nunc. Suspendisse tempus varius nibh, nec faucibus metus blandit ut. Vestibulum sodales nisl velit. Ut a sagittis odio. Cras hendrerit gravida nisl, nec aliquam ex mattis vel. In porttitor purus eu diam tempus vehicula. Cras lacinia cursus sagittis. </p>
+          <footer class="info-testimonial clearfix">
+            <img src="img/testimonial.jpg" alt="imagen testimonial">
+            <cite>Oswaldo Aponte Escobedo <span>Diseñador en @prisma</span></cite> 
+          </footer>
+        </blockquote>
+      </div><!--.testimonial-->
+      <div class="testimonial">
+        <blockquote>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vehicula convallis erat. In ante augue, feugiat luctus justo eu, luctus tempus nunc. Suspendisse tempus varius nibh, nec faucibus metus blandit ut. Vestibulum sodales nisl velit. Ut a sagittis odio. Cras hendrerit gravida nisl, nec aliquam ex mattis vel. In porttitor purus eu diam tempus vehicula. Cras lacinia cursus sagittis.</p>
+          <footer class="info-testimonial clearfix">
+            <img src="img/testimonial.jpg" alt="imagen testimonial">
+            <cite>Oswaldo Aponte Escobedo <span>Diseñador en @prisma</span></cite> 
+          </footer>
+        </blockquote>
+      </div><!--.testimonial-->
+      <div class="testimonial">
+        <blockquote>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vehicula convallis erat. In ante augue, feugiat luctus justo eu, luctus tempus nunc. Suspendisse tempus varius nibh, nec faucibus metus blandit ut. Vestibulum sodales nisl velit. Ut a sagittis odio. Cras hendrerit gravida nisl, nec aliquam ex mattis vel. In porttitor purus eu diam tempus vehicula. Cras lacinia cursus sagittis. </p>
+          <footer class="info-testimonial clearfix">
+            <img src="img/testimonial.jpg" alt="imagen testimonial">
+            <cite>Oswaldo Aponte Escobedo <span>Diseñador en @prisma</span></cite> 
+          </footer>
+        </blockquote>
+      </div> <!--.testimonial-->
+    </div>
+  </section>
+  
+  <div class="newsletter parallax">
+    <div class="contenido">
+      <p>Regístrate al newsletter</p>
+      <h3>gldwebcamp</h3>
+      <a href="#" class="button transparente">Registro</a>
+    </div> <!--.contenido-->
+  </div> <!--.newsletter-->
+
+  <sectio class="seccion">
+    <h2>Faltan</h2>
+    <div class="cuenta-regresiva contenedor">
+      <ul class="clearfix">
+        <li><p class="numero">80</p>días</li>
+        <li><p class="numero">15</p>horas</li>
+        <li><p class="numero">5</p>minutos </li>
+        <li><p class="numero">30</p>segundos</li>
+      </ul>
+    </div>
+  </section>
+  
   <script src="js/vendor/modernizr-3.8.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
