--- a/index.html
+++ b/index.html
@@ -190,10 +190,10 @@
   <div class="contador parallax">
     <div class="contenedor">
       <ul class="resumen-evento clearfix">
-        <li><p class="numero"></p>Invitados</li>
-        <li><p class="numero"></p>Talleres</li>
-        <li><p class="numero"></p>Dias</li>
-        <li><p class="numero"></p>Conferencias</li>
+        <li><p class="numero">0</p>Invitados</li>
+        <li><p class="numero">0</p>Talleres</li>
+        <li><p class="numero">0</p>Dias</li>
+        <li><p class="numero">0</p>Conferencias</li>
       </ul>
     </div>
   </div>
@@ -327,6 +327,7 @@
   <script src="aishek-jquery-animateNumber-8b31991/jquery.animateNumber.min.js"></script>
   <script src="jquery.countdown-2.2.0/jquery.countdown.min.js"></script>
   <script src="Lettering.js-master/jquery.lettering.js"></script>
+  <script src="imakewebthings-waypoints-34d9f6d/lib/jquery.waypoints.min.js"></script>
   <script src="js/main.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
